Rev0 of surf map, need to find a way to contain within box and allow scrolling to prevent page bleed

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -112,12 +112,18 @@
 
 /*? ============= Surf Map Page ============= */
 .surfMapBox {
-  width: 500px;
-  overflowX: 'scroll';
+  /* width: 500px;
+   */
+  /* overflowX: 'scroll'; */
 }
 
 .surfMap {
-  /* max-width: 100%; */
+  max-width: 100%;
+}
+
+.surfMapTitle{
+  font-family: "Catamaran-ExtraBold";
+  font-size: 30px;
 }
 
 
